test/files/pos/anyval-children.scala
@inline class Bippy extends AnyVal