test/files/neg/bug95.scala
class C extends AnyVal;
class T extends Unit;
